@@ -1,5 +1,5 @@
-<img class="mr-3" style="width: 64px; height: 64px; border-radius: 50%"
-  [defaultImage]="environment.LAZY_LOAD_IMAGE"
+<img class="mr-3" style="width: 64px; height: 64px; border-radius: 50%; background-color: #f7f7f7"
+  [defaultImage]="'assets/images/png/shop.png'"
   [lazyLoad]="environment.IMAGE_URL + shop?.profileImage" alt="shop profile" />
 <div class="col">
   <div class="d-flex mt-2">
