@@ -4,6 +4,11 @@
 
 - v1.0.1010                                 -
 ---------------------------------------------
+- 2020-06-07                                -
+---------------------------------------------
+.: WSM: Task: Update shop profile image (WSM-105)
+
+---------------------------------------------
 - 2020-06-06                                -
 ---------------------------------------------
 .: WSM: Task: Add Today special if page is a restaurant (WSM-66)
